src/test/deca/context/invalid/created/appel_meth/appel_method_int.deca
// Description :
//   	appel d'une methode sur un int
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(3.42) <type> n’est pas un type de classe

{
int a;
a();
}